# fluttervideocompressionwithcppffmpeg

./: README.md  pubspec.yaml
android/: CMakeLists.txt
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/bilalkaya/fluttervideocompressionwithcppffmpeg/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  native_ffmpeg.dart  video_player.dart
lib/controller/: main_controller.dart
lib/ffi/: native_ffmpeg.cpp
lib/model/: compressionrequest.dart
test/: widget_test.dart
